@@ -4,6 +4,14 @@
 #answer {
 	background: #FFFFF8;
 }
+#example_title {
+	font-size: smaller;
+	background: #FFFFF0;
+}
+#example {
+	background: #FFFFF8;
+	border: thin ridge #FFFFA0;
+}
 #comment {
 	background: #FFFFF8;
 }
